package eaglesakura_ace;

import "AcesConstants.proto";

import "GeoProtocol.proto";

option java_package = "com.eaglesakura.andriders.protocol";

// 標準コマンド
enum CommandType {
    // 拡張機能トリガー起動された
    // トリガーは近接、Activity、時限、GEO等色々ある
    ExtensionTrigger = 1;

    // [削除] ACEsに通知を行わせる
    AcesNotification = 2;

    // [削除] サウンドを鳴らす
    SoundNotification = 3;
}

// [削除] 音声による通知を行う
message SoundNotificationPayload {
    // サウンドをキューに貯める場合はtrue、すぐに鳴らす場合はfalse
    required bool queue = 1;

    // サウンドファイルのURI
    optional string sourceUri = 2;

    // 事前指定してある種類のサウンドを鳴らす
    optional string soundKey = 3;
}

// [削除] Notifiationの長さを指定する
enum NotificationLength {
    // 短い時間だけ通知を表示する
    Short = 1;

    // 通常の時間だけ通知を表示する
    Normal = 2;

    // 長めに通知を表示する
    Long = 3;

    // 通知を常に表示する
    // 通知を削除する場合、短いメッセージで上書きする
    Never = 100;
}

// [削除] 通知を表示させる
// 基本的にはACEs-UIに対して表示する
// 対応している場合はWear等へのブロードキャストを行う
message NotificationRequestPayload {
    // 表示されるテキストメッセージ
    // 長すぎる場合は途中で端折られる
    required string message = 1;

    // 通知時に表示する画像
    // ファイル、もしくはパスを指定する。必要に応じ、自動的に拡大縮小される
    // なるべく小さなサイズが望ましい
    optional bytes iconFile = 2;
    optional string iconPath = 3;

    // 通知を表示する時間
    required NotificationLength length = 4;

    // 通知ID
    // 同じIDで、かつ既に表示中の場合は上書き表示される
    required string uniqueId = 5;

    // 通知の発行時刻
    required string date = 6;

    // 背景色のXRGBカラー、文字色は反転色となる
    optional int32 backgroundXRGB = 7;

    // サウンドの通知指定
    optional SoundNotificationPayload sound = 8;
}

// [削除] ツイートしたい内容を格納する
message TweetRequestPayload {
    // ツイートする内容
    required string tweetMessage = 1;
    // ハッシュタグ一覧
    // その他、強制的に #andriders が付与される。
    repeated string hashtags = 2;

    // 画像ファイルへのURI一覧
    // Payloadの容量を小さくするため、なるべくこちらを利用することを推奨
    repeated string imageUris = 4;

    //	// ツイートオプション/ケイデンス
    //	optional bool withCadence = 5;
    //	// ツイートオプション/心拍
    //	optional bool withHeartrate = 6;
    //	// ツイートオプション/現在速度
    //	optional bool withSpeed = 7;
    //	// ツーとオプション/最高速度
    //	optional bool withSpeedRecord = 8;
}

message IntentExtra {
    enum ValueType {
        String = 1;
        Boolean = 2;
        Integer = 3;
        Long = 4;
        Float = 5;
        Double = 6;
        ByteArray = 7;
    }
    // Intentに渡す型
    required ValueType type = 2;
    // IntentのExtraKey
    required string key = 1;
    // Intentに渡す値（一旦stringとする）
    required string value = 3;
}

// Intentデータを保存する
message IntentPayload {
    // 起動方法
    enum BootType {
        Activity = 1;
        Broadcast = 2;
        Service = 3;

        // データのみを保持する
        DataOnly = 10;
    }

    required BootType type = 1;
    optional string componentName = 2;
    optional string action = 3;
    optional int32 flags = 5; // Intentに付与するフラグ
    optional string dataUri = 6; // Intentに付与するData
    repeated IntentExtra extras = 4;
}

// コマンド用payload
message TriggerPayload {
    // コマンド実行キー
    required string key = 1;

    // コマンド実行時に渡されたIntentを起動する
    required string appExtraKey = 2;

    // アプリの追加情報
    optional IntentPayload appIntent = 3;
}

// 遠隔接続されたデバイスを制御するためのメッセージプロトコル
message CommandPayload {
    // 何をするかのコマンド
    // CommandTypeが格納されるが、互換性維持のためstringとしておく
    required string commandType = 1;

    // 拡張データを格納するペイロード
    optional bytes extraPayload = 2;
}
